fix(content-scaffold): atomic generation on bad --depth/--category; drop dead javaparser dep
I2: generateMob/generateItem now plan every touchpoint (read + validate in memory) before
flushing any write, so an unknown --depth (JsonBestiaryInserter.addMob) or --category
(GeneratorCategoryInserter.addItem) throws before the class file, sprite, PNG, GeneralAsset
entry, or localization entry ever reach disk -- instead of after ~5 files were already
written. Covered by invalidDepthLeavesNoPartialWrites / invalidCategoryLeavesNoPartialWrites,
which snapshot the registry files and assert byte-identical content plus no new files after
the thrown exception.

I1: investigated the reported bare-prefix idempotency-token collision against current
source. The token AnchorInserter.insertAbove actually receives already appends ".name="
(git history confirms this was true from the two commits that introduced these call sites);
the bare string the finding quoted is the unrelated `label` reporting parameter one line
below it. Verified empirically that the real token does not collide with the cited
"items.rings.ring.diamond" case, so left the token expressions unchanged and instead added
longerSiblingKeyDoesNotFalsePositiveTheLocalizationToken (mob + item) to lock the property
in -- proven to discriminate by temporarily reverting to a bare token and confirming both
tests fail, then restoring.

I3: removed the unused javaparser-core dependency (zero references under src/; all
inserters are regex/text-based).